Added PlaceOrder Page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://assets.stickpng.com/images/584c69846e7d5809d2fa6366.png"
+      href="https://www.freeiconspng.com/thumbs/angry-birds-png/angry-birds-hd-png-pictures-10.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
